# Career-Compass

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: __init__.py  auth.py  config.py  llm.py  models.py  prompting.py  redis_client.py  schemas.py
app/static/: app.js  styles.css
app/templates/: index.html
tests/: test_app.py
