[project]
name = "career-compass"
version = "0.2.0"
description = "AI Career Guidance Chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "flask-sqlalchemy>=3.1.1",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.18",
  "redis>=5.0.4",
  "python-dotenv>=1.0.0",
  "itsdangerous>=2.2.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-google-genai>=1.0.0",
  "pydantic>=2.6.0",
  "email-validator>=2.1.1",
  "gunicorn>=21.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
